make sure that the footer items don't cause a horizontal scrollbar

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -53,6 +53,12 @@ html a.button:hover {
     color: white;
 }
 
+footer h5,
+footer a {
+    /* Make sure that the items in the footer don't cause a horizontal scrollbar. */
+    width: fit-content;
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
